media-server/network_policies/deny-non-whitelisted.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
  namespace: media-server
spec:
  podSelector: {}
  ingress: []
