media-server/network_policies/deny-traffic-nfs.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-deny-all
spec:
  podSelector:
    matchLabels:
      app: nfs
  ingress: []
